--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "react-dom": "19.2.0",
     "tailwindcss": "4.1.14",
     "typescript": "5.9.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.14"
   }
 }
