--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "5.9.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.14"
+    "@tailwindcss/postcss": "^4.1.14",
+    "daisyui": "^5.3.8"
   }
 }
