Refactor posts route to use parallel comments and update imports
feat: Refactor posts route to use parallel comments and update imports

> Renamed comments route files to use Next.js parallel routes (@comments), added a layout for post details with comments section, and updated import paths to use aliases defined in tsconfig.json.
> Improved error handling for not found responses and removed unused components.
> Updated tsconfig.json with new path aliases and baseUrl.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,14 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
-    }
+      "@/*": ["./*"],
+      "@/components/*": ["app/components/*"],
+      "@/types/*": ["app/types/*"],
+      "@/lib/*": ["lib/*"]
+    },
+    "ignoreDeprecations": "6.0"
   },
   "include": [
     "next-env.d.ts",
