--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predev": "prisma generate",
     "dev": "next dev",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "24.8.0",
+    "@prisma/client": "^6.18.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "autoprefixer": "10.4.21",
@@ -19,11 +23,28 @@
     "postcss": "8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwindcss": "4.1.14",
-    "typescript": "5.9.3"
+    "tailwindcss": "4.1.14"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
-    "daisyui": "^5.3.8"
-  }
+    "@types/node": "^24.9.1",
+    "daisyui": "^5.3.8",
+    "prisma": "^6.18.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kayson-Souksaly/next-app.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/Kayson-Souksaly/next-app/issues"
+  },
+  "homepage": "https://github.com/Kayson-Souksaly/next-app#readme"
 }
